5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1822_3179.log
== TEST (2019-06-13 10:38:33) 
-- CODE:
from numpy import*
v=array(eval(input("Digite um vetor: ")))

n=zeros(size(v),dtype=int)
for x in range(size(v)):
	if(v[x]==1):
		c[x]=1.replace c[size(v)-1]
print(c)		
-- ERROR:
File "XXXX", line 7
    c[x]=1.replace c[size(v)-1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:45) 
-- CODE:
from numpy import*
v=array(eval(input("Digite um vetor: ")))

n=zeros(size(v),dtype=int)
for x in range(size(v)):
	if(v[x]==1):
		c[x]=1.replace in c[size(v)-1]
print(c)		
-- ERROR:
File "XXXX", line 7
    c[x]=1.replace in c[size(v)-1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:57) 
-- CODE:
from numpy import*
v=array(eval(input("Digite um vetor: ")))

n=zeros(size(v),dtype=int)
for x in range(size(v)):
	if(v[x]==1):
		c[x]=1.replace c[size(v)-1]
print(c)		
-- ERROR:
File "XXXX", line 7
    c[x]=1.replace c[size(v)-1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:42) 
-- CODE:
from numpy import*
v=array(eval(input("Digite um vetor: ")))

n=zeros(size(v),dtype=int)
for x in range(size(v)):
	c[x]=1.replace c[size(v)-1]
print(c)	
-- ERROR:
File "XXXX", line 6
    c[x]=1.replace c[size(v)-1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:04) 
-- CODE:
from numpy import*
v=array(eval(input("Digite um vetor: ")))

n=zeros(size(v),dtype=int)
for x in range(size(v)):
	c[x]=1.replace "c[size(v)-1]"
print(c)	
-- ERROR:
File "XXXX", line 6
    c[x]=1.replace "c[size(v)-1]"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
